对齐开源，graph，多 agent，loop 恢复